# startup/src/main/java/startup/controller/PlayerController.java
@@ -10,7 +10,8 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.bind.annotation.*;
 import startup.common.dto.GameDto;
 import startup.common.dto.PlayerDto;
-import startup.dto.GenericResponseDto;
+import startup.dto.ErrorResponse;
+import startup.dto.JoinGameRequest;
 import startup.exception.GameNotFoundException;
 import startup.service.PlayerService;
 
@@ -33,53 +34,44 @@ public class PlayerController {
 
     @ApiOperation(
             value = "Creates a new player that joins a game",
-            response = GenericResponseDto.class)
+            httpMethod = "POST",
+            response = PlayerDto.class)
     @ApiResponses(value = {
-            @ApiResponse(code = HttpStatus.SC_OK, message = "New player joined game successfully", response = GenericResponseDto.class),
+            @ApiResponse(code = HttpStatus.SC_OK, message = "New player joined game successfully", response = PlayerDto.class),
             @ApiResponse(code = HttpStatus.SC_BAD_REQUEST, message = "The request was invalid."),
             @ApiResponse(code = HttpStatus.SC_INTERNAL_SERVER_ERROR, message = "An internal server error occurred.")
     })
     @PostMapping(path = "/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
-    public @ResponseBody Object joinGame(@PathVariable final String code, @RequestParam final String name,
+    public @ResponseBody Object joinGame(@PathVariable final String code, @RequestBody final JoinGameRequest joinGameRequest,
                                          final HttpServletResponse response) {
         try {
-            final PlayerDto createdPlayer = this.playerService.joinGame(code, name);
+            return this.playerService.joinGame(code, joinGameRequest.getName());
 
-            return GenericResponseDto.builder()
-                    .withSuccess(true)
-                    .withEntity(createdPlayer.getGuid())
-                    .withMessage("New player successfully joined the game")
-                    .build();
         } catch (final GameNotFoundException e) {
             response.setStatus(HttpStatus.SC_NOT_FOUND);
 
-            return GenericResponseDto.builder()
-                    .withSuccess(false)
+            return ErrorResponse.builder()
                     .withMessage("Game was not found")
                     .build();
         }
     }
 
     @ApiOperation(
-            value = "Makes a move",
+            value = "Test",
             httpMethod = "POST",
-            response = GenericResponseDto.class)
+            response = GameDto.class)
     @ApiResponses(value = {
-            @ApiResponse(code = HttpStatus.SC_OK, message = "Made the move successfully", response = GenericResponseDto.class),
+            @ApiResponse(code = HttpStatus.SC_OK, message = "Test successfully", response = GameDto.class),
             @ApiResponse(code = HttpStatus.SC_BAD_REQUEST, message = "The request was invalid."),
             @ApiResponse(code = HttpStatus.SC_INTERNAL_SERVER_ERROR, message = "An internal server error occurred.")
     })
-    @PostMapping(value = "/start", produces =  MediaType.APPLICATION_JSON_VALUE)
+    @PostMapping(value = "/test", produces =  MediaType.APPLICATION_JSON_VALUE)
     public @ResponseBody Object sow(@RequestParam final String playerId) {
-        final GameDto game = this.playerService.start(playerId);
+        final GameDto game = this.playerService.test(playerId);
 
         simpMessagingTemplate.convertAndSend("/topic/game-progress/" + game.getCode(), game);
 
-        return GenericResponseDto.builder()
-                .withSuccess(true)
-                .withEntity(game)
-                .withMessage("Player successfully made a move")
-                .build();
+        return game;
     }
 
 }
